# literature-review-agent

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
examples/trust-game/: literature-review-data.json  literature-review.html  project_config.yaml  references.bib
src/lit_agent/: __init__.py  bibtex.py  changelog.py  cli.py  config.py  discover.py  enrich.py  openalex.py  pdftext.py  review.py
src/lit_agent/templates/: literature_review.html
tests/: test_changelog.py  test_discover.py  test_enrich.py  test_openalex.py  test_pdftext.py
