[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "literature-review-agent"
version = "0.1.0"
description = "Generate project-specific literature review configs and interactive HTML review pages."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Rabbit Research Tools" }
]
dependencies = [
  "PyYAML>=6.0"
]

[project.scripts]
lit-agent = "lit_agent.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lit_agent = ["templates/*.html"]
