[metadata]
name = literature-review-agent
version = 0.1.0
description = Generate project-specific literature review configs and interactive HTML review pages.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Rabbit Research Tools

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    PyYAML>=6.0
include_package_data = True

[options.extras_require]
pdf =
    pypdf>=4.0

[options.packages.find]
where = src

[options.package_data]
lit_agent =
    templates/*.html

[options.entry_points]
console_scripts =
    lit-agent = lit_agent.cli:main
